--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
 		<mybatis-spring-boot-starter.version>2.3.2</mybatis-spring-boot-starter.version>
 		<mysql-connector-j.version>8.3.0</mysql-connector-j.version>
 
+		<dm8.jdbc.version>8.1.3.62</dm8.jdbc.version>
+
 		<slf4j-api.version>2.0.13</slf4j-api.version>
 		<junit-jupiter.version>5.10.2</junit-jupiter.version>
 		<javax.annotation-api.version>1.3.2</javax.annotation-api.version>
