--- a/xxl-job-admin/pom.xml
+++ b/xxl-job-admin/pom.xml
@@ -70,6 +70,12 @@
 			<version>${mysql-connector-j.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.dameng</groupId>
+			<artifactId>DmJdbcDriver18</artifactId>
+			<version>${dm8.jdbc.version}</version>
+		</dependency>
+
 		<!-- xxl-job-core -->
 		<dependency>
 			<groupId>com.xuxueli</groupId>
