--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -24,10 +24,26 @@ mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 #mybatis.type-aliases-package=com.xxl.job.admin.core.model
 
 ### xxl-job, datasource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=root_pwd
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+#spring.datasource.username=root
+#spring.datasource.password=root_pwd
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.datasource.url=jdbc:dm://localhost:5236/DMSERVER?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+#spring.datasource.username=SYSDBA
+#spring.datasource.password=SYSDBA
+#spring.datasource.driver-class-name=dm.jdbc.driver.DmDriver
+
+#spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:com.kingbase8.Driver}
+
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:dm://localhost:5236?schema=XXL-JOB&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:dm.jdbc.driver.DmDriver}
+
+## select : -->  mysql,dm,kingBase
+mybatis.configuration.database-id=${SPRING_DATASOURCE_DATABASE_TYPE:dm}
+
 
 ### datasource-pool
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
